Minor design change Fixed abbr on mobile

--- a/projects/FoodRecognition.css
+++ b/projects/FoodRecognition.css
@@ -197,6 +197,24 @@ a, abbr {
     color: rgb(182, 182, 182);
 }
 
+abbr[title]:after
+{
+   content: " (" attr(title) ")";
+}
+
+@media screen and (min-width: 1025px)
+{
+   abbr[title]
+   {
+      cursor:help;
+   }
+
+   abbr[title]:after
+   {
+      content: "";
+   }
+}
+
 /* ICONS */
 
 .fa {
